tests/golden/type_errors/record_pattern_unknown_field.cd
struct Person { name: string }
let person = Person { name: "Ada" };
print match person {
  Person { missing: _ } => "missing",
};
