tests/golden/type_errors/record_pattern_unknown_field.err
Type error at 4:12: struct `Person` has no field `missing` in record pattern
    Person { missing: _ } => "missing",
             ^
